# ai-agent-study

./: README.md  _p5_render_worker.py  arabic_renderer.py  main.ipynb  main.py  pyproject.toml  server.py  tools.py
fonts/: README.md
static/: app.js  index.html  style.css
